--- a/index.html
+++ b/index.html
@@ -106,3 +106,76 @@
     </body>
 
 </html>
+
+
+<script>
+    function enviarFormulario() {
+            var nomeMorador = document.getElementById('nomeMorador').value;
+            var rgMorador = document.getElementById('rgMorador').value;
+            var cpfMorador = document.getElementById('cpfMorador').value;
+            var telefoneMorador = document.getElementById('telefoneMorador').value;
+            var celularMorador = document.getElementById('celularMorador').value;
+            var emailMorador = document.getElementById('emailMorador').value;
+            var formaPagamento = document.getElementById('formaPagamento').value;
+
+            // Campos EM CASO DE URGÊNCIA
+            var nomeUrgencia = document.getElementById('nomeUrgencia').value;
+            var celularUrgencia = document.getElementById('celularUrgencia').value;
+
+            // Campos DEMAIS MORADORES DA UNIDADE
+            var nomeMoradorExtra = document.getElementById('nomeMoradorExtra').value;
+            var rgMoradorExtra = document.getElementById('rgMoradorExtra').value;
+            var grauParentescoMoradorExtra = document.getElementById('grauParentescoMoradorExtra').value;
+
+            // Campos FUNCIONÁRIOS DA UNIDADE
+            var nomeFuncionario = document.getElementById('nomeFuncionario').value;
+            var rgFuncionario = document.getElementById('rgFuncionario').value;
+            var cargoFuncionario = document.getElementById('cargoFuncionario').value;
+            var horarioFuncionario = document.getElementById('horarioFuncionario').value;
+
+            // Campos VEÍCULOS DA UNIDADE
+            var marcaVeiculo = document.getElementById('marcaVeiculo').value;
+            var modeloVeiculo = document.getElementById('modeloVeiculo').value;
+            var corVeiculo = document.getElementById('corVeiculo').value;
+            var placaVeiculo = document.getElementById('placaVeiculo').value;
+
+            // Campos ANIMAIS DA UNIDADE
+            var nomeAnimal = document.getElementById('nomeAnimal').value;
+            var especieAnimal = document.getElementById('especieAnimal').value;
+            var racaAnimal = document.getElementById('racaAnimal').value;
+            var corAnimal = document.getElementById('corAnimal').value;
+
+            var dados = {
+                nomeMorador: nomeMorador,
+                rgMorador: rgMorador,
+                cpfMorador: cpfMorador,
+                telefoneMorador: telefoneMorador,
+                celularMorador: celularMorador,
+                emailMorador: emailMorador,
+                formaPagamento: formaPagamento,
+                nomeUrgencia: nomeUrgencia,
+                celularUrgencia: celularUrgencia,
+                nomeMoradorExtra: nomeMoradorExtra,
+                rgMoradorExtra: rgMoradorExtra,
+                grauParentescoMoradorExtra: grauParentescoMoradorExtra,
+                nomeFuncionario: nomeFuncionario,
+                rgFuncionario: rgFuncionario,
+                cargoFuncionario: cargoFuncionario,
+                horarioFuncionario: horarioFuncionario,
+                marcaVeiculo: marcaVeiculo,
+                modeloVeiculo: modeloVeiculo,
+                corVeiculo: corVeiculo,
+                placaVeiculo: placaVeiculo,
+                nomeAnimal: nomeAnimal,
+                especieAnimal: especieAnimal,
+                racaAnimal: racaAnimal,
+                corAnimal: corAnimal
+            };
+
+            console.log(JSON.stringify(dados));
+
+            return false;
+        }
+  </script>
+
+
